--- a/ExperimentalProbability.UI/Properties/ButtonResources.xaml
+++ b/ExperimentalProbability.UI/Properties/ButtonResources.xaml
@@ -1,9 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:resx="clr-namespace:ExperimentalProbability.UI.Properties.LocalizableResources">
+                    xmlns:resx="clr-namespace:ExperimentalProbability.Contracts.Properties;assembly=ExperimentalProbability.Contracts">
 
     <Style x:Key="Style_Button_RunCalculation" TargetType="Button">
         <Style.Setters>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
             <Setter Property="IsEnabled" Value="False"/>
             <Setter Property="HorizontalAlignment" Value="Right"/>
             <Setter Property="Padding" Value="3"/>
