needed refactor after moving localizable resources

--- a/ExperimentalProbability.UI/App.xaml
+++ b/ExperimentalProbability.UI/App.xaml
@@ -6,17 +6,17 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Properties\ElementsResources\BorderResources.xaml"/>
-                <ResourceDictionary Source="Properties\ElementsResources\ButtonResources.xaml"/>
-                <ResourceDictionary Source="Properties\ElementsResources\ColorPickerResources.xaml"/>
-                <ResourceDictionary Source="Properties\ElementsResources\ComboBoxResources.xaml"/>
-                <ResourceDictionary Source="Properties\ElementsResources\EllipseResources.xaml"/>
-                <ResourceDictionary Source="Properties\ElementsResources\IntegerUpDownResources.xaml"/>
-                <ResourceDictionary Source="Properties\ElementsResources\LabelResources.xaml"/>
-                <ResourceDictionary Source="Properties\ElementsResources\MessageBoxResources.xaml"/>
-                <ResourceDictionary Source="Properties\ElementsResources\ScrollViewerResources.xaml"/>
-                <ResourceDictionary Source="Properties\ElementsResources\TextBlockResources.xaml"/>
-                <ResourceDictionary Source="Properties\ElementsResources\WindowResources.xaml"/>
+                <ResourceDictionary Source="Properties\BorderResources.xaml"/>
+                <ResourceDictionary Source="Properties\ButtonResources.xaml"/>
+                <ResourceDictionary Source="Properties\ColorPickerResources.xaml"/>
+                <ResourceDictionary Source="Properties\ComboBoxResources.xaml"/>
+                <ResourceDictionary Source="Properties\EllipseResources.xaml"/>
+                <ResourceDictionary Source="Properties\IntegerUpDownResources.xaml"/>
+                <ResourceDictionary Source="Properties\LabelResources.xaml"/>
+                <ResourceDictionary Source="Properties\MessageBoxResources.xaml"/>
+                <ResourceDictionary Source="Properties\ScrollViewerResources.xaml"/>
+                <ResourceDictionary Source="Properties\TextBlockResources.xaml"/>
+                <ResourceDictionary Source="Properties\WindowResources.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
