--- a/ExperimentalProbability.UI/Properties/EllipseResources.xaml
+++ b/ExperimentalProbability.UI/Properties/EllipseResources.xaml
@@ -5,6 +5,7 @@
         <Style.Setters>
             <Setter Property="Width" Value="15"/>
             <Setter Property="Height" Value="{Binding RelativeSource={RelativeSource Self}, Path=Width}"/>
+            <Setter Property="Stroke" Value="DarkCyan"/>
         </Style.Setters>
     </Style>
     
