PR: Third Project Part (#19)
* added dynamic  settings in UI, logic is not implemented, translation redone

* migration back to .NET Framework 4.6.1, because of system issues in our school.

* added controllers, dynamic settings in UI

* added dynamic  settings in UI, logic is not implemented, translation redone

* migration back to .NET Framework 4.6.1, because of system issues in our school.

* added controllers, dynamic settings in UI

* resource use in UI reworked

* added stylecop analyzers, refactor based on stylecop analyzers ruleset

* style cop refactor for compatibility

* stylecop ruleset updated

* added ui elements styles, ui refactor to use xceed toolkit ui elements

* another changes in UI logic, small bit of data parsing to colored balls calculation

* resource structure refactor

* misspell in resources corrected

* ui elements resources refactor

* elements resource refactor, mainly keys of the resources refactored

* hopefully a final resource structure refactor

* migration to .NET Framework 4.8 on UI project, migration to .NET Standart 2.0 on Calculations project

* UI Architecture redone

* Calculation on going changes

* style for error messages

* added contracts project to avoid circular project reference, localizable resources now available in both UI and Calculation projects

* calculation with dice reworked

* calculation now runs as a background operation

* needed refactor after moving localizable resources

* basic data displayer

* base for reworked coloredballs calculation

* removed for now not used icon

* coloredballs calculation finished, some refactor

--- a/ExperimentalProbability.UI/App.xaml
+++ b/ExperimentalProbability.UI/App.xaml
@@ -2,7 +2,23 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
+
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Properties\BorderResources.xaml"/>
+                <ResourceDictionary Source="Properties\ButtonResources.xaml"/>
+                <ResourceDictionary Source="Properties\ColorPickerResources.xaml"/>
+                <ResourceDictionary Source="Properties\ComboBoxResources.xaml"/>
+                <ResourceDictionary Source="Properties\EllipseResources.xaml"/>
+                <ResourceDictionary Source="Properties\IntegerUpDownResources.xaml"/>
+                <ResourceDictionary Source="Properties\LabelResources.xaml"/>
+                <ResourceDictionary Source="Properties\MessageBoxResources.xaml"/>
+                <ResourceDictionary Source="Properties\ScrollViewerResources.xaml"/>
+                <ResourceDictionary Source="Properties\TextBlockResources.xaml"/>
+                <ResourceDictionary Source="Properties\WindowResources.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
+    
 </Application>
