--- a/ExperimentalProbability.UI/MainWindow.xaml
+++ b/ExperimentalProbability.UI/MainWindow.xaml
@@ -3,119 +3,81 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:p="assembly="
+        xmlns:local="clr-namespace:ExperimentalProbability.UI"
+        xmlns:v="clr-namespace:ExperimentalProbability.UI.CustomElements.Views"
+        xmlns:vtc="clr-namespace:ExperimentalProbability.UI.CustomElements.Views.Types.ColoredBalls"
+        xmlns:vtd="clr-namespace:ExperimentalProbability.UI.CustomElements.Views.Types.Dice"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
-        Title="Experimental Probability"
-        Height="720"
-        Width="1280"
-        Background="#181818"
-        FontSize="20"
-        Foreground="White">
+        Style="{StaticResource Style_Window_MainWindow_Default}"
+        DataContext="{Binding RelativeSource={RelativeSource Self}}">
 
-    <DockPanel LastChildFill="True"
-               Margin="10">
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+        </Grid.RowDefinitions>
 
-        <Border DockPanel.Dock="Top"
-                BorderBrush="DarkCyan"
-                BorderThickness="0,0,0,1">
-
-            <DockPanel LastChildFill="False"
-                       Margin="0,0,0,10">
-
-                <TextBlock x:Name="Header_Settings"
-                           DockPanel.Dock="Top"
-                           Margin="0,0,0,10"
-                           FontSize="28"
-                           FontWeight="Bold"/>
-
-                <TextBlock x:Name="Text_Type"
-                           Margin="0,0,10,0"
-                           Text="Type"/>
-
-                <ComboBox x:Name="Box_Types"
-                          SelectedIndex="0"
-                          SelectionChanged="Box_Types_SelectionChanged"/>
-
-
-                <TextBlock x:Name="Text_Condition"
-                           Margin="10,0,10,0"
-                           Text="Condition"/>
-
-                <ComboBox x:Name="Box_Conditions"
-                          Text="None" SelectionChanged="Box_Conditions_SelectionChanged"/>
-
-
-                <TextBlock x:Name="Text_Simulations" Margin="10,0,10,0"
-                           Text="Simulations"/>
-
-                <TextBox x:Name="NumberOfSimulations"
-                         Width="115"
-                         TextAlignment="Right"/>
-
+        <Border Grid.Column="0" Grid.Row="0" Style="{StaticResource Style_Border_Heavy_Bottom}">
+            <StackPanel>
+                <TextBlock Style="{StaticResource Style_TextBlock_Settings_Header1}"/>
+                <WrapPanel>
+                    <WrapPanel Margin="0,0,5,5">
+                        <Label Target="{Binding ComboBox_TypeSelection}" Style="{StaticResource Style_Label_TypeSelection}"/>
+                        <ComboBox x:Name="ComboBox_TypeSelection" Style="{StaticResource Style_ComboBox_TypeSelection}" ItemsSource="{Binding Types}" SelectionChanged="ComboBox_TypeSelection_SelectionChanged"/>
+                    </WrapPanel>
+                    <WrapPanel Margin="0,0,5,5">
+                        <Label Target="{Binding IntegerUpDown_SimulationsToRun}" Style="{StaticResource Style_Label_SimulationsToRun}"/>
+                        <xctk:IntegerUpDown x:Name="IntegerUpDown_SimulationsToRun" Style="{StaticResource Style_IntegerUpDown_SimulationsToRun}"/>
+                    </WrapPanel>
+                </WrapPanel>
+                <StackPanel x:Name="Panel_Settings" Visibility="Collapsed">
+                    <Border Style="{StaticResource Style_Border_Medium_Top}">
+                        <StackPanel>
+                            <TextBlock Style="{StaticResource Style_TextBlock_Settings_TypeHeader2}"/>
+                            <StackPanel x:Name="Panel_TypeSettings">
+                                <vtc:TypeSettingsView/>
+                                <vtd:TypeSettingsView/>
+                            </StackPanel>
+                        </StackPanel>
+                    </Border>
+                    <Border Style="{StaticResource Style_Border_Medium_Top}">
+                        <StackPanel>
+                            <TextBlock Style="{StaticResource Style_TextBlock_Settings_ConditionHeader2}"/>
+                            <StackPanel x:Name="Panel_TypeConditions">
+                                <vtc:ConditionSettingsView/>
+                                <vtd:ConditionSettingsView/>
+                            </StackPanel>
+                        </StackPanel>
+                    </Border>
+                </StackPanel>
+            </StackPanel>
+        </Border>
+        <Border Grid.Column="0" Grid.Row="1" Style="{StaticResource Style_Border_Heavy_Bottom}">
+            <ScrollViewer HorizontalScrollBarVisibility="Disabled">
+                <StackPanel>
+                    <v:TutorialView x:Name="View_Tutorial"/>
+                    <StackPanel x:Name="Panel_Descriptions" Visibility="Collapsed">
+                        <TextBlock Style="{StaticResource Style_TextBlock_Description_Header1}"/>
+                        <StackPanel x:Name="Panel_TypeDescriptions">
+                            <vtc:DescriptionView/>
+                            <vtd:DescriptionView/>
+                        </StackPanel>
+                    </StackPanel>
+                </StackPanel>
+            </ScrollViewer>
+        </Border>
+        <v:ResultsView Grid.Column="0" Grid.Row="2" x:Name="View_Results"/>
+        <Border Grid.Column="0" Grid.Row="3" Style="{StaticResource Style_Border_Heavy_Top}" Padding="5">
+            <DockPanel LastChildFill="False">
+                <Button x:Name="Button_RunCalculation" DockPanel.Dock="Right" Style="{StaticResource Style_Button_RunCalculation}" Click="Button_RunCalculation_Click"/>
             </DockPanel>
         </Border>
+    </Grid>
 
-        <Border DockPanel.Dock="Top"
-                BorderBrush="DarkCyan"
-                BorderThickness="0,0,0,1">
-
-            <DockPanel Margin="0,10,0,10"
-                       LastChildFill="False">
-
-                <TextBlock x:Name="Header_Description"
-                           DockPanel.Dock="Top"
-                           Margin="0,0,0,10"
-                           FontSize="28"
-                           FontWeight="Bold"/>
-
-                <TextBlock x:Name="Header_Description_Type"
-                           DockPanel.Dock="Top"
-                           FontWeight="Bold"/>
-
-                <TextBlock x:Name="Description_Type"
-                           DockPanel.Dock="Top"/>
-
-                <TextBlock x:Name="Header_Description_Condition"
-                           DockPanel.Dock="Top"
-                           Margin="0,10,0,0"
-                           FontWeight="Bold"/>
-
-                <TextBlock x:Name="Description_Condition"
-                           DockPanel.Dock="Top"/>
-
-            </DockPanel>
-        </Border>
-
-        <Button x:Name="Button_Run"
-                DockPanel.Dock="Bottom"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Bottom"
-                Margin="0,10,0,0"
-                Click="Button_Run_Click"/>
-        
-        <Border DockPanel.Dock="Top"
-                BorderBrush="DarkCyan"
-                BorderThickness="0,0,0,1">
-            
-            <DockPanel Margin="0,10,0,10"
-                       LastChildFill="False">
-
-                <TextBlock x:Name="Header_Results"
-                           DockPanel.Dock="Top"
-                           Margin="0,0,0,10"
-                           FontSize="28"
-                           FontWeight="Bold"/>
-
-                <TextBlock x:Name="Text_SimulationsRun"
-                           DockPanel.Dock="Top"/>
-
-                <TextBlock x:Name="Text_ConditionsMet"
-                           DockPanel.Dock="Top"/>
-
-                <TextBlock x:Name="Text_Probability"
-                           DockPanel.Dock="Top"/>
-
-            </DockPanel>
-        </Border>
-    </DockPanel>
 </Window>
