new twodplane calculation for calculating the approximate area of a function

--- a/ExperimentalProbability.UI/MVVM/Views/ShellView.xaml
+++ b/ExperimentalProbability.UI/MVVM/Views/ShellView.xaml
@@ -60,6 +60,11 @@
                         Content="{x:Static resx:Resources.PiCalc}"
                         Style="{StaticResource MenuButton}"
                         />
+                    <RadioButton
+                        x:Name="ShowAreaCalc"
+                        Content="{x:Static resx:Resources.AreaCalc}"
+                        Style="{StaticResource MenuButton}"
+                        />
                 </StackPanel>
             </StackPanel>
         </Border>
