--- a/ExperimentalProbability.UI/MVVM/Views/Calculations/Pool/ColoredBalls/ShellView.xaml
+++ b/ExperimentalProbability.UI/MVVM/Views/Calculations/Pool/ColoredBalls/ShellView.xaml
@@ -1,13 +1,13 @@
 ﻿<UserControl
-    x:Class="ExperimentalProbability.UI.MVVM.Views.Calculations.Pool.Dice.DiceShellView"
+    x:Class="ExperimentalProbability.UI.MVVM.Views.Calculations.Pool.ColoredBalls.ShellView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:cal="http://www.caliburnproject.org"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:vm="clr-namespace:ExperimentalProbability.UI.MVVM.ViewModels.Calculations.Pool.Dice"
+    xmlns:vm="clr-namespace:ExperimentalProbability.UI.MVVM.ViewModels.Calculations.Pool.ColoredBalls"
     Padding="5"
-    d:DataContext="{d:DesignInstance Type=vm:DiceShellViewModel}"
+    d:DataContext="{d:DesignInstance Type=vm:ShellViewModel}"
     mc:Ignorable="d"
     >
     <DockPanel>
