--- a/ExperimentalProbability.UI/MVVM/Views/Calculations/Pool/Dice/ShellView.xaml
+++ b/ExperimentalProbability.UI/MVVM/Views/Calculations/Pool/Dice/ShellView.xaml
@@ -1,13 +1,13 @@
 ﻿<UserControl
-    x:Class="ExperimentalProbability.UI.MVVM.Views.Calculations.TwoDPlane.QuarterCircle.QuarterCircleShellView"
+    x:Class="ExperimentalProbability.UI.MVVM.Views.Calculations.Pool.Dice.ShellView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:cal="http://www.caliburnproject.org"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:vm="clr-namespace:ExperimentalProbability.UI.MVVM.ViewModels.Calculations.TwoDPlane.QuarterCircle"
+    xmlns:vm="clr-namespace:ExperimentalProbability.UI.MVVM.ViewModels.Calculations.Pool.Dice"
     Padding="5"
-    d:DataContext="{d:DesignInstance Type=vm:QuarterCircleShellViewModel}"
+    d:DataContext="{d:DesignInstance Type=vm:ShellViewModel}"
     mc:Ignorable="d"
     >
     <DockPanel>
@@ -15,7 +15,11 @@
         <ContentControl cal:View.Model="{Binding Path=FooterVM, Mode=OneTime}" DockPanel.Dock="Bottom" />
         <DockPanel>
             <ContentControl cal:View.Model="{Binding Path=ResultsVM, Mode=OneTime}" DockPanel.Dock="Bottom" />
-            <ContentControl cal:View.Model="{Binding Path=DescriptionVM, Mode=OneTime}" DockPanel.Dock="Top" />
+            <DockPanel DockPanel.Dock="Top">
+                <ContentControl cal:View.Model="{Binding Path=PoolVM, Mode=OneTime}" DockPanel.Dock="Top" />
+                <ContentControl cal:View.Model="{Binding Path=ConditionVM, Mode=OneTime}" DockPanel.Dock="Top" />
+                <ContentControl cal:View.Model="{Binding Path=DescriptionVM, Mode=OneTime}" DockPanel.Dock="Bottom" />
+            </DockPanel>
         </DockPanel>
     </DockPanel>
 </UserControl>
