--- a/ExperimentalProbability.UI/MVVM/Views/Calculations/TwoDPlane/DescriptionView.xaml
+++ b/ExperimentalProbability.UI/MVVM/Views/Calculations/TwoDPlane/DescriptionView.xaml
@@ -1,13 +1,12 @@
 ﻿<UserControl
-    x:Class="ExperimentalProbability.UI.MVVM.Views.Calculations.TwoDPlane.QuarterCircle.DescriptionView"
+    x:Class="ExperimentalProbability.UI.MVVM.Views.Calculations.TwoDPlane.DescriptionView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:gcResx="clr-namespace:ExperimentalProbability.Contracts.Properties.Resources.Calculations.General;assembly=ExperimentalProbability.Contracts"
     xmlns:gtdcResx="clr-namespace:ExperimentalProbability.Contracts.Properties.Resources.Calculations.TwoDPlane.General;assembly=ExperimentalProbability.Contracts"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:resx="clr-namespace:ExperimentalProbability.Contracts.Properties.Resources.Calculations.TwoDPlane.QuarterCircle;assembly=ExperimentalProbability.Contracts"
-    xmlns:vm="clr-namespace:ExperimentalProbability.UI.MVVM.ViewModels.Calculations.TwoDPlane.QuarterCircle"
+    xmlns:vm="clr-namespace:ExperimentalProbability.UI.MVVM.ViewModels.Calculations.TwoDPlane"
     d:DataContext="{d:DesignInstance Type=vm:DescriptionViewModel}"
     mc:Ignorable="d"
     >
@@ -29,7 +28,7 @@
             </StackPanel>
             <TextBlock
                 Margin="0,5,0,0"
-                Text="{x:Static resx:Resources.FullDescription}"
+                Text="{Binding Path=FullDescription, Mode=OneTime}"
                 TextWrapping="Wrap"
                 />
         </StackPanel>
