--- a/ExperimentalProbability.UI/MVVM/Views/ShellView.xaml
+++ b/ExperimentalProbability.UI/MVVM/Views/ShellView.xaml
@@ -2,14 +2,11 @@
     x:Class="ExperimentalProbability.UI.MVVM.Views.ShellView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:cal="http://www.caliburnproject.org"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:pccbResx="clr-namespace:ExperimentalProbability.Contracts.Properties.Resources.Calculations.Pool.ColoredBalls;assembly=ExperimentalProbability.Contracts"
-    xmlns:pcdResx="clr-namespace:ExperimentalProbability.Contracts.Properties.Resources.Calculations.Pool.Dice;assembly=ExperimentalProbability.Contracts"
     xmlns:resx="clr-namespace:ExperimentalProbability.Contracts.Properties.Resources.Shell;assembly=ExperimentalProbability.Contracts"
-    xmlns:tResx="clr-namespace:ExperimentalProbability.Contracts.Properties.Resources.Tutorial;assembly=ExperimentalProbability.Contracts"
-    xmlns:tdpcaResx="clr-namespace:ExperimentalProbability.Contracts.Properties.Resources.Calculations.TwoDPlane.Area;assembly=ExperimentalProbability.Contracts"
-    xmlns:tdpcpResx="clr-namespace:ExperimentalProbability.Contracts.Properties.Resources.Calculations.TwoDPlane.Pi;assembly=ExperimentalProbability.Contracts"
     xmlns:vm="clr-namespace:ExperimentalProbability.UI.MVVM.ViewModels"
     Title="{x:Static resx:Resources.DisplayName}"
     d:DataContext="{d:DesignInstance Type=vm:ShellViewModel}"
@@ -41,36 +38,32 @@
                         Text="{x:Static resx:Resources.Header}"
                         />
                 </Border>
-                <StackPanel Margin="5,0,0,0">
-                    <RadioButton
-                        x:Name="ShowTutorial"
-                        Content="{x:Static tResx:Resources.DisplayName}"
-                        IsChecked="True"
-                        Style="{StaticResource MenuButton}"
-                        />
-                    <TextBlock Style="{StaticResource MenuComment}" Text="{x:Static resx:Resources.PoolCalcs}" />
-                    <RadioButton
-                        x:Name="ShowColoredBallsCalc"
-                        Content="{x:Static pccbResx:Resources.DisplayName}"
-                        Style="{StaticResource MenuButton}"
-                        />
-                    <RadioButton
-                        x:Name="ShowDiceCalc"
-                        Content="{x:Static pcdResx:Resources.DisplayName}"
-                        Style="{StaticResource MenuButton}"
-                        />
-                    <TextBlock Style="{StaticResource MenuComment}" Text="{x:Static resx:Resources.TwoDPlaneCalcs}" />
-                    <RadioButton
-                        x:Name="ShowPiCalc"
-                        Content="{x:Static tdpcpResx:Resources.Function}"
-                        Style="{StaticResource MenuButton}"
-                        />
-                    <RadioButton
-                        x:Name="ShowAreaCalc"
-                        Content="{x:Static tdpcaResx:Resources.Function}"
-                        Style="{StaticResource MenuButton}"
-                        />
-                </StackPanel>
+                <ItemsControl Margin="5,0,0,0" ItemsSource="{Binding Path=ViewModelPlaceholders, Mode=OneTime}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <RadioButton
+                                Content="{Binding Path=Name, Mode=OneTime}"
+                                IsChecked="{Binding Path=IsShown, Mode=TwoWay}"
+                                IsEnabled="{Binding Path=IsViewModelReference, Mode=OneTime}"
+                                Style="{StaticResource MenuButton}"
+                                >
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="Click">
+                                        <cal:ActionMessage MethodName="MenuButtonClick">
+                                            <cal:Parameter Value="{Binding}" />
+                                        </cal:ActionMessage>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+
+                            </RadioButton>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
             </StackPanel>
         </Border>
         <Border
