--- a/ExperimentalProbability.UI/Styles/ShellStyles.xaml
+++ b/ExperimentalProbability.UI/Styles/ShellStyles.xaml
@@ -17,6 +17,8 @@
             <Setter Property="Foreground" Value="White" />
             <Setter Property="Grid.Column" Value="1" />
             <Setter Property="Margin" Value="0,0,5,0" />
+            <Setter Property="Padding" Value="20,0,0,0" />
+            <Setter Property="FontSize" Value="16" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type RadioButton}">
@@ -26,9 +28,9 @@
                             Background="{TemplateBinding Property=Background}"
                             >
                             <TextBlock
-                                Margin="20,0,0,0"
+                                Margin="{TemplateBinding Padding}"
                                 VerticalAlignment="Center"
-                                FontSize="16"
+                                FontSize="{TemplateBinding FontSize}"
                                 FontWeight="Medium"
                                 Text="{TemplateBinding Property=Content}"
                                 />
@@ -46,6 +48,8 @@
                 <Setter Property="Background" Value="#005454" />
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Padding" Value="0" />
+                <Setter Property="FontSize" Value="14" />
                 <Setter Property="Margin" Value="0,10,0,5" />
                 <Setter Property="FontStyle" Value="Italic" />
                 <Setter Property="Foreground" Value="#FFa4a7a8" />
