--- a/ExperimentalProbability.UI/MVVM/Views/ShellView.xaml
+++ b/ExperimentalProbability.UI/MVVM/Views/ShellView.xaml
@@ -2,11 +2,13 @@
     x:Class="ExperimentalProbability.UI.MVVM.Views.ShellView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:cal="http://www.caliburnproject.org"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:resx="clr-namespace:ExperimentalProbability.Contracts.Properties.Resources.Shell;assembly=ExperimentalProbability.Contracts"
     xmlns:vm="clr-namespace:ExperimentalProbability.UI.MVVM.ViewModels"
-    Title="{Binding Path=DisplayName, Mode=OneTime}"
+    Title="{x:Static resx:Resources.DisplayName}"
     d:DataContext="{d:DesignInstance Type=vm:ShellViewModel}"
     Background="#0A0909"
     FontFamily="Yu Gothic"
@@ -36,36 +38,32 @@
                         Text="{x:Static resx:Resources.Header}"
                         />
                 </Border>
-                <StackPanel Margin="5,0,0,0">
-                    <RadioButton
-                        x:Name="ShowTutorial"
-                        Content="{x:Static resx:Resources.Tutorial}"
-                        IsChecked="True"
-                        Style="{StaticResource MenuButton}"
-                        />
-                    <TextBlock Style="{StaticResource MenuComment}" Text="{x:Static resx:Resources.PoolCalcs}" />
-                    <RadioButton
-                        x:Name="ShowColoredBallsCalc"
-                        Content="{x:Static resx:Resources.ColoredBallsCalc}"
-                        Style="{StaticResource MenuButton}"
-                        />
-                    <RadioButton
-                        x:Name="ShowDiceCalc"
-                        Content="{x:Static resx:Resources.DiceCalc}"
-                        Style="{StaticResource MenuButton}"
-                        />
-                    <TextBlock Style="{StaticResource MenuComment}" Text="{x:Static resx:Resources.TwoDPlaneCalcs}" />
-                    <RadioButton
-                        x:Name="ShowPiCalc"
-                        Content="{x:Static resx:Resources.PiCalc}"
-                        Style="{StaticResource MenuButton}"
-                        />
-                    <RadioButton
-                        x:Name="ShowAreaCalc"
-                        Content="{x:Static resx:Resources.AreaCalc}"
-                        Style="{StaticResource MenuButton}"
-                        />
-                </StackPanel>
+                <ItemsControl Margin="5,0,0,0" ItemsSource="{Binding Path=ViewModelPlaceholders, Mode=OneTime}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <RadioButton
+                                Content="{Binding Path=Name, Mode=OneTime}"
+                                IsChecked="{Binding Path=IsShown, Mode=TwoWay}"
+                                IsEnabled="{Binding Path=IsViewModelReference, Mode=OneTime}"
+                                Style="{StaticResource MenuButton}"
+                                >
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="Click">
+                                        <cal:ActionMessage MethodName="MenuButtonClick">
+                                            <cal:Parameter Value="{Binding}" />
+                                        </cal:ActionMessage>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+
+                            </RadioButton>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
             </StackPanel>
         </Border>
         <Border
